till exp v15, xent or l2 and cov loss combined

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -1023,9 +1023,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cd117c5-06d2-4544-9bb3-a57b283ebdcd",
+   "metadata": {},
+   "source": [
+    "#### exp v12: xent_and_cov loss with sigmoid mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2176da01-c8eb-4f34-8858-6397cd257bbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.dataset.name': \"'mpi3d_toy'\", 'train_final_config.model.supervised_sampling_method': \"'core_set_greedy'\"}\n",
+      "filtered df shape is (15, 56)\n",
+      "filtered df shape is (15, 56)\n",
+      "filtered df shape is (15, 56)\n",
+      "metric train_final_results.reconstruction_loss results: \n",
+      " train_final_config.s2_vae.beta                          1        4        16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                           \n",
+      "0.25                                               6391.62  6421.76  6474.36\n",
+      "1.00                                               6422.56  6422.99  6474.35\n",
+      "2.00                                               6415.19  6422.88  6474.36\n",
+      "4.00                                               6419.70  6422.98  6474.35\n",
+      "8.00                                               6420.80  6474.35  6474.36\n",
+      "metric train_final_results.supervised_loss results: \n",
+      " train_final_config.s2_vae.beta                         1       4       16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                        \n",
+      "0.25                                               262.91  255.47  267.48\n",
+      "1.00                                               311.16  295.55  264.66\n",
+      "2.00                                               307.38  290.97  294.27\n",
+      "4.00                                               315.79  301.54  298.07\n",
+      "8.00                                               384.93  320.49  380.54\n",
+      "metric train_final_results.kl_loss results: \n",
+      " train_final_config.s2_vae.beta                       1         4         16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                          \n",
+      "0.25                                               9.20  2.19e+00  6.44e-06\n",
+      "1.00                                               2.71  1.89e+00  1.46e-05\n",
+      "2.00                                               4.26  1.95e+00  4.20e-05\n",
+      "4.00                                               2.88  1.90e+00  5.39e-05\n",
+      "8.00                                               2.80  4.61e-04  3.62e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "metric_names = ['train_final_results.reconstruction_loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_v12.json\"\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.supervised_loss.cov_loss_ratio'\n",
+    "column_names = [\n",
+    "    'train_final_config.s2_vae.beta',\n",
+    "]\n",
+    "# filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'mpi3d_toy'\"\n",
+    "\n",
+    "\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7042fb0-4366-447e-bdf1-2c978cbd71c6",
+   "id": "7a5b3178-d0fa-4ef3-afd8-375ff507a933",
    "metadata": {},
    "outputs": [],
    "source": []
