till exp v19, full-scale experiment on xent_and_cov loss for all datasets

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -951,7 +951,10 @@
   {
    "cell_type": "markdown",
    "id": "23428b6e-74c7-4d49-b052-d8478c14dfb6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp v11: cov_and_xent loss"
    ]
@@ -1025,7 +1028,10 @@
   {
    "cell_type": "markdown",
    "id": "3cd117c5-06d2-4544-9bb3-a57b283ebdcd",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp v12: xent_and_cov loss with sigmoid mu"
    ]
@@ -1097,9 +1103,223 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "496a27bb-c1d6-4b1b-92b8-b65605dbb1a2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "#### exp v16: 1000 random points, just mu, different xent_and_cov ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "500a7267-402a-48e0-b124-88fbeda8f4c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.dataset.name': \"'dsprites_full'\", 'train_final_config.model.supervised_sampling_method': \"'random'\"}\n",
+      "filtered df shape is (15, 55)\n",
+      "filtered df shape is (15, 55)\n",
+      "filtered df shape is (15, 55)\n",
+      "metric train_final_results.reconstruction_loss results: \n",
+      " train_final_config.s2_vae.beta                        1      4       16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                      \n",
+      "0.00                                               23.47  45.85  111.14\n",
+      "0.12                                               24.00  47.66  111.79\n",
+      "0.50                                               28.13  50.16  112.84\n",
+      "1.00                                               29.98  51.64  113.10\n",
+      "4.00                                               36.29  60.97  119.79\n",
+      "metric train_final_results.supervised_loss results: \n",
+      " train_final_config.s2_vae.beta                         1       4       16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                        \n",
+      "0.00                                               188.34  187.57  188.03\n",
+      "0.12                                               202.82  192.00  189.73\n",
+      "0.50                                               207.45  201.74  194.20\n",
+      "1.00                                               224.82  219.62  199.57\n",
+      "4.00                                               294.16  265.36  223.42\n",
+      "metric train_final_results.kl_loss results: \n",
+      " train_final_config.s2_vae.beta                        1      4     16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                    \n",
+      "0.00                                               26.59  14.18  6.62\n",
+      "0.12                                               25.54  13.92  6.60\n",
+      "0.50                                               24.60  13.57  6.56\n",
+      "1.00                                               24.73  13.36  6.57\n",
+      "4.00                                               23.37  12.57  6.28\n"
+     ]
+    }
+   ],
+   "source": [
+    "metric_names = ['train_final_results.reconstruction_loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_v16.json\"\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.supervised_loss.cov_loss_ratio'\n",
+    "column_names = [\n",
+    "    'train_final_config.s2_vae.beta',\n",
+    "]\n",
+    "# filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'dsprites_full'\"\n",
+    "\n",
+    "\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b019518-e3f6-4807-9652-9cd7ed5c34c7",
+   "metadata": {},
+   "source": [
+    "#### exp v17 + v19: 1000 random points, just mu, V16 with smallnorb and shapes3d, 5 seeds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "47337c5e-3069-4fb4-b757-04eb9cf47a36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.dataset.name': \"'shapes3d'\", 'train_final_config.model.supervised_sampling_method': \"'random'\"}\n",
+      "filtered df shape is (62, 87)\n",
+      "filtered df shape is (62, 87)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.beta                       1     4     16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                  \n",
+      "0.00                                               0.27  0.46  0.76\n",
+      "0.12                                               0.27  0.65  0.71\n",
+      "0.50                                               0.37  0.56  0.72\n",
+      "1.00                                               0.30  0.60  0.76\n",
+      "4.00                                               0.33  0.51   NaN\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.beta                       1     4     16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                  \n",
+      "0.00                                               0.10  0.29  0.69\n",
+      "0.12                                               0.11  0.43  0.60\n",
+      "0.50                                               0.17  0.37  0.61\n",
+      "1.00                                               0.13  0.41  0.64\n",
+      "4.00                                               0.20  0.33   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# metric_names = ['train_final_results.reconstruction_loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
+    "\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v17.json\"\n",
+    "df1 = pd.read_json(aggregated_results_path)\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v19.json\"\n",
+    "df2 = pd.read_json(aggregated_results_path)\n",
+    "df = pd.concat([df1, df2])\n",
+    "\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.supervised_loss.cov_loss_ratio'\n",
+    "column_names = [\n",
+    "    'train_final_config.s2_vae.beta',\n",
+    "]\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'shapes3d'\"\n",
+    "# filter_dict[\"train_final_config.dataset.name\"] = \"'smallnorb'\"\n",
+    "\n",
+    "\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd0c78a0-431e-4b9c-a3c6-2596b7dd5e67",
+   "metadata": {},
+   "source": [
+    "#### exp v18: V16 with cars3d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "62e1f773-8d8f-48e8-ab14-434fcade369c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.dataset.name': \"'cars3d'\", 'train_final_config.model.supervised_sampling_method': \"'random'\"}\n",
+      "filtered df shape is (65, 84)\n",
+      "filtered df shape is (65, 84)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.beta                       1     4     16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                  \n",
+      "0.00                                               0.48  0.49  0.41\n",
+      "0.12                                               0.42  0.47  0.38\n",
+      "0.50                                               0.44  0.43  0.37\n",
+      "1.00                                               0.44  0.35  0.34\n",
+      "4.00                                               0.39  0.30  0.30\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.beta                       1     4     16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                  \n",
+      "0.00                                               0.24  0.23  0.20\n",
+      "0.12                                               0.23  0.20  0.18\n",
+      "0.50                                               0.19  0.18  0.17\n",
+      "1.00                                               0.19  0.16  0.16\n",
+      "4.00                                               0.17  0.15  0.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# metric_names = ['train_final_results.reconstruction_loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
+    "\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v18.json\"\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.supervised_loss.cov_loss_ratio'\n",
+    "column_names = [\n",
+    "    'train_final_config.s2_vae.beta',\n",
+    "]\n",
+    "# filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'cars3d'\"\n",
+    "\n",
+    "\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a5b3178-d0fa-4ef3-afd8-375ff507a933",
+   "id": "d9987b33-fbbe-47d1-8874-a92b732ef1dc",
    "metadata": {},
    "outputs": [],
    "source": []
