exp v20 - independent VAE

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -1317,9 +1317,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cac997a6-b151-49cc-b0cc-006b4eb622a9",
+   "metadata": {},
+   "source": [
+    "#### exp v20: independent VAE - beta VAE with latent unit covariance loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a8f70335-612f-4b73-8e36-7846595cb490",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.supervised_loss.cov_loss_ratio': 0, 'train_final_config.dataset.name': \"'mpi3d_toy'\", 'train_final_config.model.supervised_sampling_method': \"'random'\"}\n",
+      "filtered df shape is (8, 88)\n",
+      "filtered df shape is (8, 88)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_independent_vae.beta         1     4     16\n",
+      "train_final_config.s2_independent_vae.gamma_ind                  \n",
+      "0.1                                              0.22  0.15  0.15\n",
+      "0.5                                               NaN  0.17   NaN\n",
+      "1.0                                               NaN  0.13   NaN\n",
+      "4.0                                              0.18  0.17  0.12\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_independent_vae.beta         1     4     16\n",
+      "train_final_config.s2_independent_vae.gamma_ind                  \n",
+      "0.1                                              0.18  0.10  0.04\n",
+      "0.5                                               NaN  0.18   NaN\n",
+      "1.0                                               NaN  0.21   NaN\n",
+      "4.0                                              0.05  0.13  0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# metric_names = ['train_final_results.reconstruction_loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
+    "\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v20.json\"\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.s2_independent_vae.gamma_ind'\n",
+    "column_names = [\n",
+    "    'train_final_config.s2_independent_vae.beta',\n",
+    "]\n",
+    "\n",
+    "filter_dict[\"train_final_config.supervised_loss.cov_loss_ratio\"] = 0\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'mpi3d_toy'\"\n",
+    "\n",
+    "\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9987b33-fbbe-47d1-8874-a92b732ef1dc",
+   "id": "6874171d-f504-4a6a-8e78-6867f81425d5",
    "metadata": {},
    "outputs": [],
    "source": []
