--- a/notebooks/calc_mig.ipynb
+++ b/notebooks/calc_mig.ipynb
@@ -182,6 +182,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "5eb266a6-d234-4c45-a882-fb735d205211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from disentanglement_lib.data.ground_truth import named_data\n",
+    "manualdsprites = named_data.get_named_ground_truth_data('manual_dsprites', -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "db9bd9e2-344e-4e88-bef9-ef1effc82640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = np.random.RandomState(0)\n",
+    "gg = manualdsprites.sample_factors(500, seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b5dada50-4d50-4d56-aa52-d1dd7c497090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices = np.random.choice(len(manualdsprites.images), 400, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "971d42ca-a687-4815-bcab-f2c9e7c294c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factors = manualdsprites.index_to_factors(indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7a39ae25-254d-432a-9983-43a7e583b8ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gg = factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6144f424-b900-40f3-b8db-90cfccb16f7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 8., 2., 2., 6., 9., 9., 9., 3., 8., 8., 0., 7., 6., 9., 4., 1.,\n",
+       "       4., 5., 9., 9., 4., 8., 2., 1., 4., 8., 5., 9., 9., 7., 0., 0., 0.,\n",
+       "       8., 2., 3., 7., 0., 5., 0., 2., 8., 7., 2., 0., 3., 7., 3., 5., 4.,\n",
+       "       8., 4., 5., 8., 9., 8., 2., 9., 1., 0., 2., 8., 0., 2., 8., 0., 7.,\n",
+       "       2., 4., 1., 6., 0., 5., 7., 3., 9., 3., 9., 2., 1., 3., 3., 5., 7.,\n",
+       "       4., 1., 4., 7., 6., 5., 5., 2., 1., 1., 4., 6., 0., 9., 2., 6., 2.,\n",
+       "       3., 3., 8., 4., 1., 7., 1., 8., 3., 2., 6., 3., 6., 2., 4., 9., 8.,\n",
+       "       2., 7., 2., 4., 1., 4., 2., 5., 3., 4., 0., 9., 8., 9., 2., 2., 1.,\n",
+       "       7.])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gg[gg[:, 0] == 0, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "id": "30898808-c213-4814-adc3-86410e5f9ede",
    "metadata": {},
