embeddings v2: testing out 1-D semi-supervised embedding loss

--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0d6bfcd4-d65a-4cd6-9d92-ef804db27fba",
    "metadata": {},
    "outputs": [],
@@ -74,6 +74,7 @@
        "      <th>model.supervised_sampling_method</th>\n",
        "      <th>model.uncertainty_method</th>\n",
        "      <th>supervised_loss.loss_fn</th>\n",
+       "      <th>embed.sigma</th>\n",
        "      <th>model.model_seed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -96,7 +97,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -117,7 +119,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -138,7 +141,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -159,7 +163,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -180,7 +185,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -201,7 +207,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -222,7 +229,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -243,7 +251,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -264,7 +273,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -285,7 +295,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -306,7 +317,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -327,7 +339,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -348,7 +361,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -369,7 +383,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -390,7 +405,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -411,7 +427,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -432,7 +449,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -453,7 +471,8 @@
        "      <td>@s2_vae()</td>\n",
        "      <td>random</td>\n",
        "      <td>dropout_mean</td>\n",
-       "      <td>xent</td>\n",
+       "      <td>embed</td>\n",
+       "      <td>learn</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -581,25 +600,45 @@
        "16                             1   @s2_vae()                           random   \n",
        "17                             1   @s2_vae()                           random   \n",
        "\n",
-       "   model.uncertainty_method supervised_loss.loss_fn  model.model_seed  \n",
-       "0              dropout_mean                    xent                 0  \n",
-       "1              dropout_mean                    xent                 0  \n",
-       "2              dropout_mean                    xent                 0  \n",
-       "3              dropout_mean                    xent                 0  \n",
-       "4              dropout_mean                    xent                 0  \n",
-       "5              dropout_mean                    xent                 0  \n",
-       "6              dropout_mean                    xent                 0  \n",
-       "7              dropout_mean                    xent                 0  \n",
-       "8              dropout_mean                    xent                 0  \n",
-       "9              dropout_mean                    xent                 0  \n",
-       "10             dropout_mean                    xent                 0  \n",
-       "11             dropout_mean                    xent                 0  \n",
-       "12             dropout_mean                    xent                 0  \n",
-       "13             dropout_mean                    xent                 0  \n",
-       "14             dropout_mean                    xent                 0  \n",
-       "15             dropout_mean                    xent                 0  \n",
-       "16             dropout_mean                    xent                 0  \n",
-       "17             dropout_mean                    xent                 0  "
+       "   model.uncertainty_method supervised_loss.loss_fn embed.sigma  \\\n",
+       "0              dropout_mean                   embed       learn   \n",
+       "1              dropout_mean                   embed       learn   \n",
+       "2              dropout_mean                   embed       learn   \n",
+       "3              dropout_mean                   embed       learn   \n",
+       "4              dropout_mean                   embed       learn   \n",
+       "5              dropout_mean                   embed       learn   \n",
+       "6              dropout_mean                   embed       learn   \n",
+       "7              dropout_mean                   embed       learn   \n",
+       "8              dropout_mean                   embed       learn   \n",
+       "9              dropout_mean                   embed       learn   \n",
+       "10             dropout_mean                   embed       learn   \n",
+       "11             dropout_mean                   embed       learn   \n",
+       "12             dropout_mean                   embed       learn   \n",
+       "13             dropout_mean                   embed       learn   \n",
+       "14             dropout_mean                   embed       learn   \n",
+       "15             dropout_mean                   embed       learn   \n",
+       "16             dropout_mean                   embed       learn   \n",
+       "17             dropout_mean                   embed       learn   \n",
+       "\n",
+       "    model.model_seed  \n",
+       "0                  0  \n",
+       "1                  0  \n",
+       "2                  0  \n",
+       "3                  0  \n",
+       "4                  0  \n",
+       "5                  0  \n",
+       "6                  0  \n",
+       "7                  0  \n",
+       "8                  0  \n",
+       "9                  0  \n",
+       "10                 0  \n",
+       "11                 0  \n",
+       "12                 0  \n",
+       "13                 0  \n",
+       "14                 0  \n",
+       "15                 0  \n",
+       "16                 0  \n",
+       "17                 0  "
       ]
      },
      "execution_count": 3,
@@ -613,7 +652,7 @@
     "# from disentanglement_lib.config.unsupervised_study_v1.sweep import get_config\n",
     "# from disentanglement_lib.config.double_descent_study_v10.sweep import get_config\n",
     "# from disentanglement_lib.config.active_learning_study_v21.sweep import get_config\n",
-    "from disentanglement_lib.config.embedding_study_v1.sweep import get_config\n",
+    "from disentanglement_lib.config.embeddings_study_v2.sweep import get_config\n",
     "\n",
     "\n",
     "\n",
