--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0d6bfcd4-d65a-4cd6-9d92-ef804db27fba",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d68dbef4-56dc-4519-91c2-b22f669a2b1a",
    "metadata": {},
    "outputs": [
@@ -64,6 +64,7 @@
        "      <th>s2_beta_tc_vae.factor_sizes</th>\n",
        "      <th>s2_independent_vae.factor_sizes</th>\n",
        "      <th>fixed_partial_labeller.observed_factor_indices</th>\n",
+       "      <th>multidimensional_embed.embedding_dimensions</th>\n",
        "      <th>encoder.encoder_fn</th>\n",
        "      <th>decoder.decoder_fn</th>\n",
        "      <th>model.name</th>\n",
@@ -88,6 +89,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[1, 2, 3, 4]</td>\n",
+       "      <td>[1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -110,6 +112,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[1, 2, 3, 4]</td>\n",
+       "      <td>[1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -132,6 +135,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[1, 2, 3, 4]</td>\n",
+       "      <td>[1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -154,6 +158,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 2, 3, 4]</td>\n",
+       "      <td>[1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -176,6 +181,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 2, 3, 4]</td>\n",
+       "      <td>[1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -198,6 +204,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 2, 3, 4]</td>\n",
+       "      <td>[1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -220,6 +227,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 3, 4]</td>\n",
+       "      <td>[1, 1, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -242,6 +250,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 3, 4]</td>\n",
+       "      <td>[1, 1, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -264,6 +273,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 3, 4]</td>\n",
+       "      <td>[1, 1, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -286,6 +296,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 4]</td>\n",
+       "      <td>[1, 1, 2, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -308,6 +319,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 4]</td>\n",
+       "      <td>[1, 1, 2, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -330,6 +342,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 4]</td>\n",
+       "      <td>[1, 1, 2, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -352,6 +365,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 3]</td>\n",
+       "      <td>[1, 1, 2, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -374,6 +388,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 3]</td>\n",
+       "      <td>[1, 1, 2, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -396,6 +411,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 3]</td>\n",
+       "      <td>[1, 1, 2, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -418,6 +434,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 3, 4]</td>\n",
+       "      <td>[1, 1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -440,6 +457,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 3, 4]</td>\n",
+       "      <td>[1, 1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -462,6 +480,7 @@
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>(3, 6, 40, 32, 32)</td>\n",
        "      <td>[0, 1, 2, 3, 4]</td>\n",
+       "      <td>[1, 1, 2, 1, 1]</td>\n",
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
@@ -540,25 +559,45 @@
        "16              (3, 6, 40, 32, 32)   \n",
        "17              (3, 6, 40, 32, 32)   \n",
        "\n",
-       "   fixed_partial_labeller.observed_factor_indices encoder.encoder_fn  \\\n",
-       "0                                    [1, 2, 3, 4]      @conv_encoder   \n",
-       "1                                    [1, 2, 3, 4]      @conv_encoder   \n",
-       "2                                    [1, 2, 3, 4]      @conv_encoder   \n",
-       "3                                    [0, 2, 3, 4]      @conv_encoder   \n",
-       "4                                    [0, 2, 3, 4]      @conv_encoder   \n",
-       "5                                    [0, 2, 3, 4]      @conv_encoder   \n",
-       "6                                    [0, 1, 3, 4]      @conv_encoder   \n",
-       "7                                    [0, 1, 3, 4]      @conv_encoder   \n",
-       "8                                    [0, 1, 3, 4]      @conv_encoder   \n",
-       "9                                    [0, 1, 2, 4]      @conv_encoder   \n",
-       "10                                   [0, 1, 2, 4]      @conv_encoder   \n",
-       "11                                   [0, 1, 2, 4]      @conv_encoder   \n",
-       "12                                   [0, 1, 2, 3]      @conv_encoder   \n",
-       "13                                   [0, 1, 2, 3]      @conv_encoder   \n",
-       "14                                   [0, 1, 2, 3]      @conv_encoder   \n",
-       "15                                [0, 1, 2, 3, 4]      @conv_encoder   \n",
-       "16                                [0, 1, 2, 3, 4]      @conv_encoder   \n",
-       "17                                [0, 1, 2, 3, 4]      @conv_encoder   \n",
+       "   fixed_partial_labeller.observed_factor_indices  \\\n",
+       "0                                    [1, 2, 3, 4]   \n",
+       "1                                    [1, 2, 3, 4]   \n",
+       "2                                    [1, 2, 3, 4]   \n",
+       "3                                    [0, 2, 3, 4]   \n",
+       "4                                    [0, 2, 3, 4]   \n",
+       "5                                    [0, 2, 3, 4]   \n",
+       "6                                    [0, 1, 3, 4]   \n",
+       "7                                    [0, 1, 3, 4]   \n",
+       "8                                    [0, 1, 3, 4]   \n",
+       "9                                    [0, 1, 2, 4]   \n",
+       "10                                   [0, 1, 2, 4]   \n",
+       "11                                   [0, 1, 2, 4]   \n",
+       "12                                   [0, 1, 2, 3]   \n",
+       "13                                   [0, 1, 2, 3]   \n",
+       "14                                   [0, 1, 2, 3]   \n",
+       "15                                [0, 1, 2, 3, 4]   \n",
+       "16                                [0, 1, 2, 3, 4]   \n",
+       "17                                [0, 1, 2, 3, 4]   \n",
+       "\n",
+       "   multidimensional_embed.embedding_dimensions encoder.encoder_fn  \\\n",
+       "0                                 [1, 2, 1, 1]      @conv_encoder   \n",
+       "1                                 [1, 2, 1, 1]      @conv_encoder   \n",
+       "2                                 [1, 2, 1, 1]      @conv_encoder   \n",
+       "3                                 [1, 2, 1, 1]      @conv_encoder   \n",
+       "4                                 [1, 2, 1, 1]      @conv_encoder   \n",
+       "5                                 [1, 2, 1, 1]      @conv_encoder   \n",
+       "6                                 [1, 1, 1, 1]      @conv_encoder   \n",
+       "7                                 [1, 1, 1, 1]      @conv_encoder   \n",
+       "8                                 [1, 1, 1, 1]      @conv_encoder   \n",
+       "9                                 [1, 1, 2, 1]      @conv_encoder   \n",
+       "10                                [1, 1, 2, 1]      @conv_encoder   \n",
+       "11                                [1, 1, 2, 1]      @conv_encoder   \n",
+       "12                                [1, 1, 2, 1]      @conv_encoder   \n",
+       "13                                [1, 1, 2, 1]      @conv_encoder   \n",
+       "14                                [1, 1, 2, 1]      @conv_encoder   \n",
+       "15                             [1, 1, 2, 1, 1]      @conv_encoder   \n",
+       "16                             [1, 1, 2, 1, 1]      @conv_encoder   \n",
+       "17                             [1, 1, 2, 1, 1]      @conv_encoder   \n",
        "\n",
        "   decoder.decoder_fn   model.name  s2_vae.beta  s2_vae.gamma_sup  \\\n",
        "0     @deconv_decoder  s2_beta_vae          1.0               1.0   \n",
@@ -641,7 +680,7 @@
        "17                 0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +691,7 @@
     "# from disentanglement_lib.config.unsupervised_study_v1.sweep import get_config\n",
     "# from disentanglement_lib.config.double_descent_study_v10.sweep import get_config\n",
     "# from disentanglement_lib.config.active_learning_study_v21.sweep import get_config\n",
-    "from disentanglement_lib.config.embeddings_study_v2.sweep import get_config\n",
+    "from disentanglement_lib.config.embeddings_study_v3.sweep import get_config\n",
     "\n",
     "\n",
     "\n",
